--- a/task-2-product-8-batch-main/task-2-product-8-batch-main/index.html
+++ b/task-2-product-8-batch-main/task-2-product-8-batch-main/index.html
@@ -11,6 +11,9 @@
 
     <button class="company-btn" onclick="sortdata('asc')">Asc</button>
     <button class="company-btn" onclick="sortdata('dsc')">DSC</button>
+    <button class="company-btn" onclick="AtoZ()">A to Z</button>
+    <button class="company-btn" onclick="ZtoA()">Z to A</button>
+    
     <!-- products -->
     <section class="products">
       <!-- filters -->
@@ -22,7 +25,6 @@
         <!-- categories -->
         <h5>Company</h5>
         <article class="companies" id="companies">
-          <!-- <button class="company-btn">all</button> -->
           <button class="company-btn"></button>
           <!-- <button class="company-btn"></button> -->
         </article>
