--- a/API'S.html
+++ b/API'S.html
@@ -10,6 +10,7 @@
             border: 2px solid black;
             border-spacing: 10px;
             text-align: center;
+            border-collapse: collapse;
         }
         td{
             padding: 10px;
@@ -18,7 +19,6 @@
 </head>
 
 <body>
-    <!-- <ul id="dis"></ul> -->
     <table id="dis"></table>
     <script>
             fetch("https://jsonplaceholder.typicode.com/posts")
