--- a/BASICS/LEC1.html
+++ b/BASICS/LEC1.html
@@ -35,6 +35,16 @@
 
         }
 
+        year = "2002"
+
+        if(year%4==0){
+            console.log("Leap Year")
+        }
+        else{
+            console.log("Not a Leap Year")
+
+        }
+
     </script>
 </body>
 
