--- a/Reduce Include find  Task/Reduce Include find  Task/index.html
+++ b/Reduce Include find  Task/Reduce Include find  Task/index.html
@@ -147,12 +147,12 @@
 
           <aside class="col-3 d-inline-block">
             <h2 class="h2 fsP fw-bold mt-3">Filter By</h2>
-            <button class="company-btn py-2 border-0 fw-bold w-100 green my-2" onclick="HighToLow(a)">Price: High to
-              Low</button>
-            <button class="company-btn py-2 border-0 fw-bold w-100 green my-2" onclick="LowToHigh(a)">Price: Low to
-              High</button>
-            <button class="company-btn py-2 border-0 fw-bold w-100 green my-2" onclick="atoz(a)">A to Z</button>
-            <button class="company-btn py-2 border-0 fw-bold w-100 green my-2" onclick="ztoa(a)">Z to A</button>
+            <button class="company-btn py-2 border-0 fw-bold w-100 green my-2" id="btn1" onclick="HighToLow(a)">Price:
+              High to Low
+              <button class="company-btn py-2 border-0 fw-bold w-100 green my-2" onclick="LowToHigh(a)">Price: Low to
+                High</button>
+              <button class="company-btn py-2 border-0 fw-bold w-100 green my-2" onclick="atoz(a)">A to Z</button>
+              <button class="company-btn py-2 border-0 fw-bold w-100 green my-2" onclick="ztoa(a)">Z to A</button>
 
           </aside>
 
