--- a/lec/apidisplaytask.html
+++ b/lec/apidisplaytask.html
@@ -21,6 +21,7 @@
                 .then(y => {
 
                     comments = y;
+                    // console.log(comments);
                     displayInfo();
 
                 })
