--- a/Workaholics/Workaholics/index.html
+++ b/Workaholics/Workaholics/index.html
@@ -15,20 +15,20 @@
 <header>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="index.html">Navbar</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">HOME</a>
+            <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"> ADD JOBS</a>
+            <a class="nav-link" href="signup.html"> ADD JOBS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">MY JOBS</a>
+            <a class="nav-link" href="myjobs.html">MY JOBS</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">EMPLOYEES</a>
@@ -37,7 +37,7 @@
             <a class="nav-link" href="#">PROFILE</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">LOGOUT</a>
+            <a class="nav-link" href="login.html">LOGOUT</a>
           </li>
         </ul>
       </div>
