--- a/menu-task-for-batch-10-main-main/menu-task-for-batch-10-main-main/index.html
+++ b/menu-task-for-batch-10-main-main/menu-task-for-batch-10-main-main/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
   <!-- styles -->
   <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -23,6 +24,10 @@
     <!-- filter buttons -->
     <div class="btn-container" id="btn">
       <button type="button" class="filter-btn" data-id="all"></button>
+    </div>
+    <div class="btn-container" id="btn1">
+      <button type="button" class="filter-btn" data-id="all"><i class="fa-solid fa-cart-shopping"><sub id="count"></sub></i></button>
+      <button type="button" class="filter-btn" data-id="all">Total</button>
     </div>
 
     <!-- menu items -->
