--- a/wikimedia/index.html
+++ b/wikimedia/index.html
@@ -24,29 +24,18 @@
             fetch('https://en.wikipedia.org/w/api.php?action=query&list=search&srlimit=20&format=json&origin=*&srsearch=' + searchValue)
                 .then(y => y.json())
                 .then(y => {
-                    myArray1.push(y)
+                    myArray1 =y.query.search;
                     console.log(myArray1);
                     display();
                 });
 
             display = () => {
-                // let myArray2 = []
                 let myArray2 = myArray1.map(function (value) {
-                    // return myArray2.push(value.query.search)
-                    return value.query.search
+                    return [value.title,value.snippet]
                 });
                 console.log(myArray2);
 
-                let displayData = myArray2.map(function(v)
-                {
-                    // return `<tr><td>${v.suggestion}</td></tr>`
-                    return `<tr><td>${v.title}</td></tr>`
-                    // return v;
-                    // return v[index];
-                })
-                console.log(displayData);
-
-                document.getElementById('dis').innerHTML = displayData.join(" ");
+                document.getElementById('dis').innerHTML = myArray2.join(" ");
             }
         }
     </script>
