--- a/localStorage/account.html
+++ b/localStorage/account.html
@@ -6,14 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account details</title>
     <style>
-        /* .thead tr{
-            background-color: #00000000;
-            color: white;
-        } */
-        /* tbody tr{
-            background-color: #cfe2ff;
+         table,
+        tr,
+        td,
+        th {
+            border: 2px solid black;
+            border-collapse: collapse;
+            padding: 10px;
+            text-align: center;
+        }
+
+        tr:nth-child(even) {
+            background-color: #5F4B8BFF;
+            color: #e69A8DFF;
+        }
+
+        tr:nth-child(odd) {
+            background-color: #e69A8DFF;
+            color: #5F4B8BFF;
+        }
+
+        table th {
+            background-color: white;
             color: black;
-        } */
+        }
+
+        #button {
+            padding: 10px;
+            background-color: #5F4B8BFF;
+            display: block;
+            margin: 5px auto;
+        }
+        #button button {
+            margin: 5px ;
+            padding: 15px;
+            border: 2px solid black;
+            background-color: #e69A8DFF;
+            color: white;
+        }
     </style>
 </head>
 
@@ -22,6 +52,7 @@
         <thead class="thead">
             <tr>
                 <td>id</td>
+                <td>title</td>
                 <td>firstName</td>
                 <td>lastName</td>
                 <td>Email</td>
@@ -42,21 +73,26 @@
         }).then(y => y.json())
             .then(y => {
 
-                let display = y.map(function(value){
-                    return `<tr>
-                        <td>${value.id}</td>
-                        <td>${value.title}</td>
-                        <td>${value.firstName}</td>
-                        <td>${value.lastName}</td>
-                        <td>${value.email}</td>
-                        </tr>`
-                });
+                display(y);
 
-                document.getElementById('display').innerHTML = display.join(" ");
             })
 
 
+        function display(data) {
 
+            let display = data.map(function (value) {
+                return `<tr>
+        <td>${value.id}</td>
+        <td>${value.title}</td>
+        <td>${value.firstName}</td>
+        <td>${value.lastName}</td>
+        <td>${value.email}</td>
+        </tr>`
+            });
+
+        
+            document.getElementById('display').innerHTML = display.join(" ");
+        }
 
     </script>
 </body>
