--- a/menu-task-for-batch-10-main-main/menu-task-for-batch-10-main-main/index.html
+++ b/menu-task-for-batch-10-main-main/menu-task-for-batch-10-main-main/index.html
@@ -6,14 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Menu</title>
   <!-- font-awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/52ca9e0df4.js" crossorigin="anonymous"></script>
   <!-- styles -->
   <link rel="stylesheet" href="styles.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
-  
+
   <section class="menu">
     <!-- title -->
     <div class="title">
@@ -22,13 +26,37 @@
     </div>
 
     <!-- filter buttons -->
+
     <div class="btn-container" id="btn">
       <button type="button" class="filter-btn" data-id="all"></button>
     </div>
     <div class="btn-container" id="btn1">
-      <button type="button" class="filter-btn" data-id="all"><i class="fa-solid fa-cart-shopping"><sub id="count"></sub></i></button>
-      <button type="button" class="filter-btn" data-id="all">Total</button>
+      <button type="button" class="filter-btn btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+        data-id="all"  onclick="mapCartItem()"><i class="fa-solid fa-cart-shopping"><sub id="count"></sub></i></button>
     </div>
+
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Cart Items</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="totalAmount">
+            
+          </div>
+          <div id="amt"></div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary" onclick="totalprice()">Checkout</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
 
     <!-- menu items -->
     <div class="section-center" id="menu">
@@ -48,9 +76,6 @@
         </div>
       </article>
 
-
-
-
     </div>
   </section>
   <!-- javascript -->
@@ -58,3 +83,6 @@
 </body>
 
 </html>
+
+
+
